--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Allan Baisgaard – Landing Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Tailwind via CDN for hurtig opsætning -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>body{font-family:'Inter',sans-serif;}</style>
 </head>
@@ -29,49 +28,42 @@
     <section aria-labelledby="sections-heading">
       <h2 id="sections-heading" class="sr-only">Undersider</h2>
       <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-
-        <article role="region" aria-labelledby="card-title-oecd" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-oecd" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="oecd.html" class="block p-6">
             <h3 id="card-title-oecd" class="text-xl font-semibold text-[#7C3AED]">Hent data fra OECD</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af OECD Data ved et klik</p>
           </a>
         </article>
-
-        <article role="region" aria-labelledby="card-title-graphs" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-graphs" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="grafer.html" class="block p-6">
             <h3 id="card-title-graphs" class="text-xl font-semibold text-[#7C3AED]">Lav grafer og kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav graf og kurver</p>
           </a>
         </article>
-
-        <article role="region" aria-labelledby="card-title-method" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-method" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="metode.html" class="block p-6">
             <h3 id="card-title-method" class="text-xl font-semibold text-[#7C3AED]">Metode spørgsmål</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Metode eksamensprojekt</p>
           </a>
         </article>
-
-        <article role="region" aria-labelledby="card-title-currency" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-currency" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="valutakurser.html" class="block p-6">
             <h3 id="card-title-currency" class="text-xl font-semibold text-[#7C3AED]">Valutakurser kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav kurver til valutakurser</p>
           </a>
         </article>
-
-        <article role="region" aria-labelledby="card-title-simple" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-simple" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="simple-ue-kurver.html" class="block p-6">
             <h3 id="card-title-simple" class="text-xl font-semibold text-[#7C3AED]">Simple U/E kurver</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
           </a>
         </article>
-
-        <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-transform transition-shadow">
+        <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="worldbank.html" class="block p-6">
             <h3 id="card-title-worldbank" class="text-xl font-semibold text-[#7C3AED]">Hent data fra World Bank</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
           </a>
         </article>
-
       </div>
     </section>
   </main>
@@ -80,12 +72,19 @@
     &copy; Allan Baisgaard, Aalborg Handelsgymnasie, Turøgade
   </footer>
 
-  <!-- Enkel besøgstæller med SVG-badge -->
-  <img
-    src="https://api.countapi.xyz/hit/allanbaisgaard-landing/visits.svg"
-    alt="Besøgstæller"
-    class="fixed bottom-2 left-2"
-  />
+  <!-- Besøgstæller -->
+  <div id="visitor-counter" class="fixed bottom-2 left-2 text-xs text-gray-600 dark:text-gray-400">
+    Besøg: <span id="counter">…</span>
+  </div>
+  <script>
+    // CountAPI besøgstæller
+    fetch('https://api.countapi.xyz/hit/allanbaisgaard-landing/visits')
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById('counter').innerText = data.value;
+      })
+      .catch(err => console.error('Fejl i besøgstæller:', err));
+  </script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
