--- a/index.html
+++ b/index.html
@@ -28,40 +28,18 @@
     <section aria-labelledby="sections-heading">
       <h2 id="sections-heading" class="sr-only">Undersider</h2>
       <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-        <article role="region" aria-labelledby="card-title-oecd" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+        <!-- Kortene uændret -->
+        <article role="region" aria-labelledby="card-title-oecd" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-all">
           <a href="oecd.html" class="block p-6">
             <h3 id="card-title-oecd" class="text-xl font-semibold text-[#7C3AED]">Hent data fra OECD</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af OECD Data ved et klik</p>
+            <p class="mt-2">Indsamling af OECD Data ved et klik</p>
           </a>
         </article>
-        <article role="region" aria-labelledby="card-title-graphs" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="grafer.html" class="block p-6">
-            <h3 id="card-title-graphs" class="text-xl font-semibold text-[#7C3AED]">Lav grafer og kurver</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Lav graf og kurver</p>
-          </a>
-        </article>
-        <article role="region" aria-labelledby="card-title-method" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="metode.html" class="block p-6">
-            <h3 id="card-title-method" class="text-xl font-semibold text-[#7C3AED]">Metode spørgsmål</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Metode eksamensprojekt</p>
-          </a>
-        </article>
-        <article role="region" aria-labelledby="card-title-currency" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="valutakurser.html" class="block p-6">
-            <h3 id="card-title-currency" class="text-xl font-semibold text-[#7C3AED]">Valutakurser kurver</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Lav kurver til valutakurser</p>
-          </a>
-        </article>
-        <article role="region" aria-labelledby="card-title-simple" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="simple-ue-kurver.html" class="block p-6">
-            <h3 id="card-title-simple" class="text-xl font-semibold text-[#7C3AED]">Simple U/E kurver</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
-          </a>
-        </article>
-        <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+        <!-- ... øvrige kort ... -->
+        <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md hover:-translate-y-1 hover:shadow-xl transition-all">
           <a href="worldbank.html" class="block p-6">
             <h3 id="card-title-worldbank" class="text-xl font-semibold text-[#7C3AED]">Hent data fra World Bank</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
+            <p class="mt-2">Indsamling af World Bank-data ved et klik</p>
           </a>
         </article>
       </div>
@@ -75,19 +53,19 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      // Gem header-effekt
       const heroHeading = document.getElementById('hero-heading');
-      window.addEventListener('scroll', function() {
-        heroHeading.classList.toggle('opacity-0', window.scrollY > 150);
-      });
-      // Besøgstæller via CountAPI (bruger countapi.xyz i stedet for api.countapi.xyz)
+      window.addEventListener('scroll', () => heroHeading.classList.toggle('opacity-0', window.scrollY > 150));
+      
+      // Besøgstæller via CountAPI på GitHub Pages
       const countEl = document.getElementById('visitor-count');
-      fetch('https://countapi.xyz/hit/allanbaisgaardlanding/visits')
-        .then(res => res.json())
-        .then(data => {
-          countEl.innerText = `Besøg: ${data.value}`;
-        })
-        .catch(() => {
-          countEl.innerText = 'Antal besøg kunne ikke indlæses';
+      // Brug det officielle endpoint med API-domæne
+      fetch('https://api.countapi.xyz/hit/allanbaisgaardlanding/visits')
+        .then(res => res.ok ? res.json() : Promise.reject())
+        .then(data => { countEl.innerText = `Besøg: ${data.value}`; })
+        .catch(err => {
+          console.warn('CountAPI-fetch fejlede:', err);
+          countEl.innerText = 'Besøgstæller ikke tilgængelig';
         });
     });
   </script>
