--- a/video.html
+++ b/video.html
@@ -38,6 +38,13 @@
           Din browser understøtter ikke video-tagget.
         </video>
       </div>
+      <div>
+        <h2 class="text-xl font-semibold mb-2">Procentvis udregning i excel</h2>
+        <video controls class="w-full rounded-lg shadow-md">
+          <source src="videos/procentvisudregning.mp4" type="video/mp4">
+          Din browser understøtter ikke video-tagget.
+        </video>
+      </div>
     </div>
   </main>
   <footer class="fixed bottom-2 right-2 text-xs text-gray-600 dark:text-gray-400">
