--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
           </a>
         </article>
+        <!-- Ny knap til World Bank data -->
         <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="worldbank.html" class="block p-6">
             <h3 id="card-title-worldbank" class="text-xl font-semibold text-[#7C3AED]">Hent data fra World Bank</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
           </a>
         </article>
-        <article role="region" aria-labelledby="card-title-videos" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="video.html" class="block p-6">
-            <h3 id="card-title-videos" class="text-xl font-semibold text-[#7C3AED]">Videoforklaringer</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Se forklaringer af udregninger i excel</p>
+        <!-- Ny knap til Gruppedannelse -->
+        <article role="region" aria-labelledby="card-title-gruppedannelse" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="grupper.html" class="block p-6">
+            <h3 id="card-title-gruppedannelse" class="text-xl font-semibold text-[#7C3AED]">Gruppedannelse</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Gruppedannelse</p>
           </a>
         </article>
       </div>
